--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-auto-height-image": "^1.1.1",
     "react-native-circular-progress": "^1.3.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-material-bottom-navigation": "^1.0.4",
+    "react-native-modal": "^11.3.1",
     "react-native-paper": "^2.16.0",
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-svg": "^9.9.3",
