--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-navigation-tabs": "latest",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "promise": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
