--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-native-community/viewpager": "^1.1.7",
     "@react-navigation/core": "latest",
     "axios": "^0.19.0",
+    "promise": "latest",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-auto-height-image": "^1.1.1",
     "react-native-circular-progress": "^1.3.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-image-picker": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-material-bottom-navigation": "^1.0.4",
     "react-native-modal": "^11.3.1",
@@ -35,8 +37,7 @@
     "react-navigation-tabs": "latest",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "typeface-roboto": "0.0.75",
-    "promise": "latest"
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
