--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-auto-height-image": "^1.1.1",
     "react-native-circular-progress": "^1.3.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-horizontal-progress-bar": "^1.0.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-material-bottom-navigation": "^1.0.4",
